[tool.poetry]
name = "cryptographic-methods"
version = "0.1.0"
description = ""
authors = ["Vasily Perekhrest <perekhrest-vasily@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
PyQt6 = "^6.2.3"
numpy = "^1.22"
sympy = "^1.9"
pyqtgraph = "^0.12.4"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
jupyterlab = "^3.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
